# hermes-jarvis

./: .gitignore  .skills_prompt_snapshot.json  state.db  state.db-shm
skills/finance/stock-strategy-assistant/: .gitignore  SKILL.md  pyproject.toml
skills/finance/stock-strategy-assistant/data/trades/: tulong_trades.csv
skills/finance/stock-strategy-assistant/data/watchlists/: 0601D3_D1_filtered_20260601_003312.csv  0601D3_watch_scan_20260601_003312.csv  0601D3_watch_scan_20260601_072943.csv  0602D3_D1_filtered_20260601_235959.csv  0602D3_watch_scan_20260601_235959.csv  0603D3_D1_filtered_20260602_232632.csv  0603D3_D1_filtered_20260603_000900.csv  0603D3_watch_manual_review_20260603_082941.csv  (+53 more)
skills/finance/stock-strategy-assistant/new-strategy-0604/: SKILL.md  examples.md  failure-samples.md
skills/finance/stock-strategy-assistant/references/: a-share-intraday-watchdog.md  a-share-wechat-alert-format.md  d3-generation-notes.md  tulong-0601-d3-validation-notes.md  tulong-a-share-mvp.md  tulong-current-rules.md  tulong-d3-d4-monitoring.md  tulong-d3-strong-continuation-generation.md  tulong-monitoring-discipline.md  tulong-operations.md  tulong-parameterized-selection.md  tulong-position-pool-concepts.md  tulong-script-organization.md  tulong-selection-and-monitoring.md  tulong-trade-screenshot-entry.md
skills/finance/stock-strategy-assistant/scripts/: vision_ocr.swift
skills/finance/stock-strategy-assistant/tests/: test_preopen_rotate_watchlist.py  test_tulong.py  test_tulong_docs_alignment.py  test_tulong_selection_cli.py  test_watchdog_alert_layers.py
(+123 files in other folders)
